// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/terraform Should handle manualChangelogUrls 1`] = `
Object {
  "changelogUrl": "https://github.com/django/django/tree/master/docs/releases",
  "releases": Array [
    Object {
      "releaseTimestamp": "2018-07-13T10:14:17",
      "version": "2.0.0",
    },
    Object {
      "releaseTimestamp": "2017-10-24T10:09:16",
      "version": "2.0.0.dev1",
    },
    Object {
      "releaseTimestamp": "2019-01-20T19:59:28",
      "version": "2.1.0",
    },
    Object {
      "releaseTimestamp": "2019-07-16T18:29:00",
      "version": "2.2.0",
    },
  ],
  "sourceUrl": "https://github.com/django/django",
}
`;

exports[`datasource/terraform Should handle manualSourceUrls 1`] = `
Object {
  "releases": Array [
    Object {
      "releaseTimestamp": "2018-07-13T10:14:17",
      "version": "2.0.0",
    },
    Object {
      "releaseTimestamp": "2017-10-24T10:09:16",
      "version": "2.0.0.dev1",
    },
    Object {
      "releaseTimestamp": "2019-01-20T19:59:28",
      "version": "2.1.0",
    },
    Object {
      "releaseTimestamp": "2019-07-16T18:29:00",
      "version": "2.2.0",
    },
  ],
  "sourceUrl": "https://github.com/nedbat/coveragepy",
}
`;

exports[`datasource/terraform Should handle parsing of sourceUrls correctly 1`] = `
Object {
  "releases": Array [
    Object {
      "releaseTimestamp": "2018-07-13T10:14:17",
      "version": "2.0.0",
    },
    Object {
      "releaseTimestamp": "2017-10-24T10:09:16",
      "version": "2.0.0.dev1",
    },
    Object {
      "releaseTimestamp": "2019-01-20T19:59:28",
      "version": "2.1.0",
    },
    Object {
      "releaseTimestamp": "2019-07-16T18:29:00",
      "version": "2.2.0",
    },
  ],
  "sourceUrl": "https://github.com/carltongibson/django-filter",
}
`;
